--- a/food_ordering/functions/package.json
+++ b/food_ordering/functions/package.json
@@ -10,18 +10,20 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "8"
+    "node": "18"
   },
+  "main": "index.js",
   "dependencies": {
     "apn": "^2.2.0",
-    "axios": "^0.19.2",
-    "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0"
+    "axios": "^1.7.2",
+    "firebase-admin": "^12.1.0",
+    "firebase-functions": "^5.0.0"
   },
   "devDependencies": {
-    "eslint": "^5.12.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "firebase-functions-test": "^0.1.6"
+    "eslint": "^8.15.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-promise": "^6.2.0",
+    "firebase-functions-test": "^3.1.0"
   },
   "private": true
 }
