--- a/laravel/foodie_restaurant/.env.example
+++ b/laravel/foodie_restaurant/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Restaurant
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:9wMwQDEBjAK5OVvehRlQhF5PE1dNk6xK3RRIUkcDyGA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=foodie_restaurant_database
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -50,3 +50,16 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FIREBASE_APIKEY=AIzaSyB5C56J0kyKrPXIHwQG47ccAz4oY8eLNuM
+FIREBASE_AUTH_DOMAIN=qwik-chow.firebaseapp.com
+FIREBASE_DATABASE_URL=https://qwik-chow-default-rtdb.firebaseio.com/
+FIREBASE_PROJECT_ID=qwik-chow
+FIREBASE_STORAGE_BUCKET=qwik-chow.appspot.com
+FIREBASE_MESSAAGING_SENDER_ID=595686676766
+FIREBASE_APP_ID=1:595686676766:web:a5892e4cd8b0de00c2510f
+FIREBASE_MEASUREMENT_ID=G-B8PGBCYWYG
+FIREBASE_KEY=AAAAirGxWR4:APA91bHr7ZhaiHtLQUVbhsGSvdeLUScqy9pAvsUcR__8Gel81nMDfNSrNWw3TYY80MfMqN-j7oPXBfZDhJ56WqWU5kvr_FwusLFm6uZgq3IisFesAKpumS8kASrvqSn83LTS_B5aMmyI
+
+IS_DISABLE_DELETE=1
+IMAGE_COMPRESSOR_QUALITY=0.6
